--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,11 +1,11 @@
 
 ################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/spring_app?autoReconnect=true&useSSL=false
-spring.datasource.username=hbstudent
-spring.datasource.password=hbstudent
+spring.datasource.url=jdbc:mysql://localhost:3306/reco?autoReconnect=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=123456
 
-#spring.datasource.initialization-mode=always
+spring.datasource.initialization-mode=always
 
 ################### Hibernate Configuration ##########################
 
@@ -15,3 +15,5 @@ spring.jpa.show-sql=true
 #security.user.name=admin
 #security.user.password=secret
 #security.user.role=USER,ADMIN
+
+spring.thymeleaf.prefix=classpath:/templates/
