--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 
 ################### DataSource Configuration ##########################
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/reco?autoReconnect=true&useSSL=false
-spring.datasource.username=root
-spring.datasource.password=123456
+spring.datasource.url=jdbc:mysql://localhost:3306/spring_app?autoReconnect=true&useSSL=false
+spring.datasource.username=hbstudent
+spring.datasource.password=hbstudent
 
 spring.datasource.initialization-mode=always
 
